fix: 자동배포 yml 수정

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -37,5 +37,5 @@ jobs:
           username: ${{ secrets.EC2_USER }}
           script: |
             docker pull ${{ secrets.DOCKERHUB_USERNAME }}/pointodo-server
-            docker stop pointodo-server
+            docker rm -f pointodo-server
             docker run -d --rm --name pointodo-server -p 3000:3000 ${{ secrets.DOCKERHUB_USERNAME }}/pointodo-server
