feat: 프리즈마 모델에서 uuid자동생성 제거, 엔티티에서 유저생성 팩토리 생성, 도메인 계층 서비스 기본 골조 구성

--- a/package.json
+++ b/package.json
@@ -27,13 +27,15 @@
     "@nestjs/passport": "^10.0.0",
     "@nestjs/platform-express": "^9.0.0",
     "@prisma/client": "^4.16.2",
+    "@types/uuid": "^9.0.2",
     "class-validator": "^0.14.0",
     "passport": "^0.6.0",
     "passport-jwt": "^4.0.1",
     "passport-local": "^1.0.0",
     "pg": "^8.11.1",
     "reflect-metadata": "^0.1.13",
-    "rxjs": "^7.2.0"
+    "rxjs": "^7.2.0",
+    "uuid": "^9.0.0"
   },
   "devDependencies": {
     "@nestjs/cli": "^9.0.0",
