--- a/package.json
+++ b/package.json
@@ -28,7 +28,9 @@
     "@nestjs/platform-express": "^9.0.0",
     "@nestjs/swagger": "^7.1.1",
     "@prisma/client": "^4.16.2",
+    "@types/bcryptjs": "^2.4.2",
     "@types/uuid": "^9.0.2",
+    "bcryptjs": "^2.4.3",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
     "passport": "^0.6.0",
