feat: prisma 첫 마이그레이션 개시

--- a/package.json
+++ b/package.json
@@ -82,6 +82,11 @@
       "**/*.(t|j)s"
     ],
     "coverageDirectory": "../coverage",
-    "testEnvironment": "node"
+    "testEnvironment": "node",
+    "moduleNameMapper": {
+      "@app/(.*)": "<rootDir>/app/$1",
+      "@domain/(.*)": "<rootDir>/domain/$1",
+      "@infrastructure/(.*)": "<rootDir>/infrastructure/$1"
+    }
   }
 }
