--- a/package.json
+++ b/package.json
@@ -29,10 +29,12 @@
     "@nestjs/swagger": "^7.1.1",
     "@prisma/client": "^4.16.2",
     "@types/bcryptjs": "^2.4.2",
+    "@types/cookie-parser": "^1.4.3",
     "@types/uuid": "^9.0.2",
     "bcryptjs": "^2.4.3",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
+    "cookie-parser": "^1.4.6",
     "passport": "^0.6.0",
     "passport-jwt": "^4.0.1",
     "passport-local": "^1.0.0",
