--- a/package.json
+++ b/package.json
@@ -38,6 +38,8 @@
     "class-validator": "^0.14.0",
     "cookie-parser": "^1.4.6",
     "ioredis": "^5.3.2",
+    "jsonwebtoken": "^9.0.1",
+    "nest-winston": "^1.9.3",
     "passport": "^0.6.0",
     "passport-google-oauth20": "^2.0.0",
     "passport-jwt": "^4.0.1",
@@ -46,7 +48,9 @@
     "pg": "^8.11.1",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.2.0",
-    "uuid": "^9.0.0"
+    "uuid": "^9.0.0",
+    "winston": "^3.10.0",
+    "winston-daily-rotate-file": "^4.7.1"
   },
   "devDependencies": {
     "@nestjs/cli": "^9.0.0",
