feat: user 도메인 유닛테스트 설정

--- a/package.json
+++ b/package.json
@@ -103,7 +103,9 @@
     "moduleNameMapper": {
       "@app/(.*)": "<rootDir>/app/$1",
       "@domain/(.*)": "<rootDir>/domain/$1",
-      "@infrastructure/(.*)": "<rootDir>/infrastructure/$1"
+      "@infrastructure/(.*)": "<rootDir>/infrastructure/$1",
+      "@interface/(.*)": "<rootDir>/interface/$1",
+      "@shared/(.*)": "<rootDir>/shared/$1"
     }
   }
 }
