--- a/tsconfig.json
+++ b/tsconfig.json
@@ -20,7 +20,9 @@
     "paths": {
       "@app/*": ["src/app/*"],
       "@domain/*": ["src/domain/*"],
-      "@infrastructure/*": ["src/infrastructure/*"]
+      "@infrastructure/*": ["src/infrastructure/*"],
+      "@interface/*": ["src/interface/*"],
+      "@shared/*": ["src/shared/*"]
     }
   }
 }
