feat: 상대경로 수정 및 e2e 테스트 회원가입

--- a/package.json
+++ b/package.json
@@ -101,6 +101,7 @@
     "coverageDirectory": "../coverage",
     "testEnvironment": "node",
     "moduleNameMapper": {
+      "@src/(.*)": "<rootDir>",
       "@app/(.*)": "<rootDir>/app/$1",
       "@domain/(.*)": "<rootDir>/domain/$1",
       "@infrastructure/(.*)": "<rootDir>/infrastructure/$1",
