feat: 회원 가입 시 뱃지 프로그레스 생성 구현

--- a/package.json
+++ b/package.json
@@ -107,7 +107,8 @@
       "@auth/(.*)": "<rootDir>/auth/$1",
       "@admin/(.*)": "<rootDir>/admin/$1",
       "@redis/(.*)": "<rootDir>/redis/$1",
-      "@cache/(.*)": "<rootDir>/cache/$1"
+      "@cache/(.*)": "<rootDir>/cache/$1",
+      "@badge/(.*)": "<rootDir>/badge/$1"
     }
   }
 }
