feat: 작업 완료 비즈니스 로직 순서 구성 완료

--- a/package.json
+++ b/package.json
@@ -109,7 +109,9 @@
       "@admin/(.*)": "<rootDir>/admin/$1",
       "@redis/(.*)": "<rootDir>/redis/$1",
       "@cache/(.*)": "<rootDir>/cache/$1",
-      "@badge/(.*)": "<rootDir>/badge/$1"
+      "@badge/(.*)": "<rootDir>/badge/$1",
+      "@point/(.*)": "<rootDir>/point/$1",
+      "@task/(.*)": "<rootDir>/task/$1"
     }
   }
 }
