--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@nestjs/jwt": "^10.1.0",
     "@nestjs/passport": "^10.0.0",
     "@nestjs/platform-express": "^9.0.0",
+    "@nestjs/schedule": "^3.0.2",
     "@nestjs/swagger": "^7.1.1",
     "@prisma/client": "^4.16.2",
     "@types/bcryptjs": "^2.4.2",
@@ -62,6 +63,7 @@
     "@nestjs/testing": "^9.0.0",
     "@types/cache-manager": "^4.0.2",
     "@types/cache-manager-ioredis": "^2.0.3",
+    "@types/cron": "^2.4.0",
     "@types/express": "^4.17.13",
     "@types/jest": "29.5.1",
     "@types/node": "18.16.12",
