--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "test:e2e": "jest --config ./test/jest-e2e.json"
   },
   "dependencies": {
+    "@aws-sdk/client-s3": "^3.388.0",
     "@nestjs/cache-manager": "^2.0.1",
     "@nestjs/common": "^9.0.0",
     "@nestjs/config": "^3.0.0",
@@ -44,6 +45,7 @@
     "ioredis": "^5.3.2",
     "js-joda": "^1.11.0",
     "jsonwebtoken": "^9.0.1",
+    "multer-s3": "^3.0.1",
     "nest-winston": "^1.9.3",
     "passport": "^0.6.0",
     "passport-google-oauth20": "^2.0.0",
@@ -66,6 +68,8 @@
     "@types/cron": "^2.4.0",
     "@types/express": "^4.17.13",
     "@types/jest": "29.5.1",
+    "@types/multer": "^1.4.7",
+    "@types/multer-s3": "^3.0.0",
     "@types/node": "18.16.12",
     "@types/passport-jwt": "^3.0.8",
     "@types/passport-local": "^1.0.35",
