--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -28,7 +28,24 @@ jobs:
           file: ./Dockerfile
           push: true
           tags: ${{ secrets.DOCKERHUB_USERNAME }}/pointodo-server
-          build-args: ORIGIN=${{ secrets.ORIGIN }}
+          build-args: |
+            ORIGIN=${{ secrets.ORIGIN }}
+            DATABASE_URL=${{ secrets.DATABASE_URL }}
+            ACCESS_TOKEN_SECRET=${{ secrets.ACCESS_TOKEN_SECRET }}
+            REFRESH_TOKEN_SECRET=${{ secrets.REFRESH_TOKEN_SECRET }}
+            REDIS_HOST=${{ secrets.REDIS_HOST }}
+            REDIS_PORT=${{ secrets.REDIS_PORT }}
+            REDIS_PASSWORD=${{ secrets.REDIS_PASSWORD }}
+            GOOGLE_ID=${{ secrets.GOOGLE_ID }}
+            GOOGLE_SECRET=${{ secrets.GOOGLE_SECRET }}
+            GOOGLE_CALLBACK=${{ secrets.GOOGLE_CALLBACK }}
+            KAKAO_ID=${{ secrets.KAKAO_ID }}
+            KAKAO_CALLBACK=${{ secrets.KAKAO_CALLBACK }}
+            AWS_BUCKET_REGION=${{ secrets.AWS_BUCKET_REGION }}
+            AWS_BUCKET_NAME=${{ secrets.AWS_BUCKET_NAME }}
+            AWS_ACCESS_KEY_ID=${{ secrets.AWS_ACCESS_KEY_ID }}
+            AWS_SECRET_ACCESS_KEY=${{ secrets.AWS_SECRET_ACCESS_KEY }}
+            DEFAULT_BADGE_LINK=${{ secrets.DEFAULT_BADGE_LINK }}
       - name: Pull and restart Docker Container
         uses: appleboy/ssh-action@master
         with:
