feat: 도커 네트워크 삭제

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -55,4 +55,4 @@ jobs:
           script: |
             docker pull ${{ secrets.DOCKERHUB_USERNAME }}/pointodo-server
             docker rm -f pointodo-server
-            docker run -d --rm --name pointodo-server --network=pointodo-network -p 3000:3000 ${{ secrets.DOCKERHUB_USERNAME }}/pointodo-server
+            docker run -d --rm --name pointodo-server -p 3000:3000 ${{ secrets.DOCKERHUB_USERNAME }}/pointodo-server
