--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
   },
   "dependencies": {
     "@aws-sdk/client-s3": "^3.388.0",
+    "@js-joda/core": "^5.5.3",
+    "@js-joda/timezone": "^2.18.0",
     "@nestjs/cache-manager": "^2.0.1",
     "@nestjs/common": "^9.0.0",
     "@nestjs/config": "^3.0.0",
