--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -45,4 +45,4 @@ jobs:
         run: yarn install --immutable --immutable-cache --check-cache
 
       - name: Run tests
-        run: yarn test
+        run: yarn test; yarn test:e2e
