feat: 기본 쓰로틀링 설정 - 분당 60회 제한

--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "@nestjs/platform-express": "^9.0.0",
     "@nestjs/schedule": "^3.0.2",
     "@nestjs/swagger": "^7.1.1",
+    "@nestjs/throttler": "^4.2.1",
     "@prisma/client": "^4.16.2",
     "@types/bcryptjs": "^2.4.2",
     "@types/cookie-parser": "^1.4.3",
