feat: apicookieauth 전역 설정 및 스웨거 basicauth 기본 설정

--- a/package.json
+++ b/package.json
@@ -45,6 +45,8 @@
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
     "cookie-parser": "^1.4.6",
+    "express-basic-auth": "^1.2.1",
+    "helmet": "^7.0.0",
     "ioredis": "^5.3.2",
     "js-joda": "^1.11.0",
     "jsonwebtoken": "^9.0.1",
