--- a/package.json
+++ b/package.json
@@ -40,6 +40,8 @@
     "@types/bcryptjs": "^2.4.2",
     "@types/cookie-parser": "^1.4.3",
     "@types/uuid": "^9.0.2",
+    "@types/multer": "^1.4.7",
+    "@types/multer-s3": "^3.0.0",
     "bcryptjs": "^2.4.3",
     "cache-manager": "^5.2.3",
     "cache-manager-ioredis": "^2.1.0",
@@ -63,7 +65,8 @@
     "rxjs": "^7.2.0",
     "uuid": "^9.0.0",
     "winston": "^3.10.0",
-    "winston-daily-rotate-file": "^4.7.1"
+    "winston-daily-rotate-file": "^4.7.1",
+    "jest": "29.5.0"
   },
   "devDependencies": {
     "@nestjs/schematics": "^9.0.0",
@@ -73,8 +76,6 @@
     "@types/cron": "^2.4.0",
     "@types/express": "^4.17.13",
     "@types/jest": "29.5.1",
-    "@types/multer": "^1.4.7",
-    "@types/multer-s3": "^3.0.0",
     "@types/node": "18.16.12",
     "@types/passport-jwt": "^3.0.8",
     "@types/passport-local": "^1.0.35",
@@ -85,7 +86,6 @@
     "eslint": "^8.0.1",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-prettier": "^4.0.0",
-    "jest": "29.5.0",
     "prettier": "^2.3.2",
     "prisma": "^4.16.2",
     "source-map-support": "^0.5.20",
