--- a/package.json
+++ b/package.json
@@ -66,7 +66,8 @@
     "uuid": "^9.0.0",
     "winston": "^3.10.0",
     "winston-daily-rotate-file": "^4.7.1",
-    "jest": "29.5.0"
+    "jest": "29.5.0",
+    "@types/jest": "29.5.1"
   },
   "devDependencies": {
     "@nestjs/schematics": "^9.0.0",
@@ -75,7 +76,6 @@
     "@types/cache-manager-ioredis": "^2.0.3",
     "@types/cron": "^2.4.0",
     "@types/express": "^4.17.13",
-    "@types/jest": "29.5.1",
     "@types/node": "18.16.12",
     "@types/passport-jwt": "^3.0.8",
     "@types/passport-local": "^1.0.35",
