--- a/package.json
+++ b/package.json
@@ -42,6 +42,9 @@
     "@types/uuid": "^9.0.2",
     "@types/multer": "^1.4.7",
     "@types/multer-s3": "^3.0.0",
+    "@types/jest": "29.5.1",
+    "@types/supertest": "^2.0.11",
+    "@nestjs/testing": "^9.0.0",
     "bcryptjs": "^2.4.3",
     "cache-manager": "^5.2.3",
     "cache-manager-ioredis": "^2.1.0",
@@ -66,12 +69,12 @@
     "uuid": "^9.0.0",
     "winston": "^3.10.0",
     "winston-daily-rotate-file": "^4.7.1",
+    "ts-jest": "29.1.0",
     "jest": "29.5.0",
-    "@types/jest": "29.5.1"
+    "supertest": "^6.1.3"
   },
   "devDependencies": {
     "@nestjs/schematics": "^9.0.0",
-    "@nestjs/testing": "^9.0.0",
     "@types/cache-manager": "^4.0.2",
     "@types/cache-manager-ioredis": "^2.0.3",
     "@types/cron": "^2.4.0",
@@ -79,7 +82,6 @@
     "@types/node": "18.16.12",
     "@types/passport-jwt": "^3.0.8",
     "@types/passport-local": "^1.0.35",
-    "@types/supertest": "^2.0.11",
     "@typescript-eslint/eslint-plugin": "^5.0.0",
     "@typescript-eslint/parser": "^5.0.0",
     "concurrently": "^8.2.0",
@@ -89,8 +91,6 @@
     "prettier": "^2.3.2",
     "prisma": "^4.16.2",
     "source-map-support": "^0.5.20",
-    "supertest": "^6.1.3",
-    "ts-jest": "29.1.0",
     "ts-loader": "^9.2.3",
     "ts-node": "^10.0.0",
     "tsconfig-paths": "4.2.0",
