--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -31,6 +31,8 @@ jobs:
       AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
       AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
       DEFAULT_BADGE_LINK: ${{ secrets.DEFAULT_BADGE_LINK }}
+      SWAGGER_USER: ${{ secrets.SWAGGER_USER }}
+      SWAGGER_PASSWORD: ${{ secrets.SWAGGER_PASSWORD }}
 
     steps:
       - name: Checkout
