--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "cookie-parser": "^1.4.6",
     "csurf": "^1.11.0",
     "express-basic-auth": "^1.2.1",
+    "express-useragent": "^1.0.15",
     "helmet": "^7.0.0",
     "ioredis": "^5.3.2",
     "jest": "29.5.0",
@@ -81,6 +82,7 @@
     "@types/cron": "^2.4.0",
     "@types/csurf": "^1.11.2",
     "@types/express": "^4.17.13",
+    "@types/express-useragent": "^1.0.2",
     "@types/node": "18.16.12",
     "@types/passport-jwt": "^3.0.8",
     "@types/passport-local": "^1.0.35",
